# arrangement-2d-js

./: .gitignore  CMakeLists.txt  README.md  install_libraries.sh  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: build.yml
build-examples/: ArrangementExample.html  ArrangementExample.js
examples/: ArrangementExample.html  ArrangementExample.ts  index.html  test.js
src/: ArrangementBuilder.cpp  ArrangementBuilder.h  Line.h  Point.h  Polygon.cpp  Polygon.h  arrangement2d.h  arrangement2d.idl
tests/: main.test.ts
